# presence-tracker

./: Cargo.toml  README.md  docker-compose.yml  env.example
data/conf/nginx/: presence.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: script.ts
frontend/style/: style.css
style/: style.css
webserver/: Cargo.toml
webserver/migrations/: 0001_initial.toml
webserver/src/: cli.rs  config.rs  main.rs
webserver/src/http/: mod.rs
webserver/src/http/handler_frontend/: current_presence.rs  mod.rs  presence.rs
webserver/src/http/handler_sensors/: mod.rs
webserver/src/models/: mod.rs
webserver/src/models/location/: db.rs  mod.rs
webserver/src/models/presence/: db.rs  mod.rs
webserver/src/modules/: mod.rs
webserver/src/modules/db_init/: mod.rs
webserver/src/modules/test_data/: mod.rs
